data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_688.wast
;; 9. **Test Description 9**:    - Create a `loop` that uses a `br_if` to restart the loop whenever a computed value on the stack meets a certain condition (e.g., an even number). Test the correct evaluation and reliance on computed stack values for loop continuation.

(assert_invalid
  (module (func $br_if_loop (result i32)
    (i32.const 10)
    (loop (result i32)
      (i32.const 1)
      (i32.add)
      (local.tee 0)
      (i32.const 2)
      (i32.rem_u)
      (i32.eqz)
      (br_if 0)
    )
  ))
  "type mismatch"
)